err/a8.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/a8'...
Compiling './lib/python3.5/site-packages/a8/bookmarks.py'...
***   File "./lib/python3.5/site-packages/a8/bookmarks.py", line 29
    print self.target
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/a8/data'...
Listing './lib/python3.5/site-packages/a8/data/icons'...
Compiling './lib/python3.5/site-packages/a8/extensions.py'...
***   File "./lib/python3.5/site-packages/a8/extensions.py", line 27
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/a8/shortcuts.py'...
***   File "./lib/python3.5/site-packages/a8/shortcuts.py", line 107
    except NotImplementedError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/a8/vimembed.py'...
***   File "./lib/python3.5/site-packages/a8/vimembed.py", line 119
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/a8-1.0.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pygtkhelpers'...
Listing './lib/python3.5/site-packages/pygtkhelpers/debug'...
Compiling './lib/python3.5/site-packages/pygtkhelpers/debug/console.py'...
***   File "./lib/python3.5/site-packages/pygtkhelpers/debug/console.py", line 597
    exec "import __builtin__" in self.locals
                            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/pygtkhelpers/gthreads.py'...
***   File "./lib/python3.5/site-packages/pygtkhelpers/gthreads.py", line 203
    except BaseException, e: #XXX: handle
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygtkhelpers/ui'...
Compiling './lib/python3.5/site-packages/pygtkhelpers/ui/dialogs.py'...
***   File "./lib/python3.5/site-packages/pygtkhelpers/ui/dialogs.py", line 257
    print gtk.ResponseType(response)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygtkhelpers/ui/objectlist'...
Compiling './lib/python3.5/site-packages/pygtkhelpers/ui/objectlist/column.py'...
***   File "./lib/python3.5/site-packages/pygtkhelpers/ui/objectlist/column.py", line 288
    print view_col
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pygtkhelpers/utils.py'...
***   File "./lib/python3.5/site-packages/pygtkhelpers/utils.py", line 77
    _DEFAULT_VALUES = {str : '', float : 0.0, int : 0, long : 0L}
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygtkhelpers-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
